Description
When I use Windows Server 2003's rpcrt4.dll on ReactOS r73321, loading it at boot time fails with the following messages in debug log:
WARNING: calling stub LsaIAllocateHeap()
|
(..\dll\win32\kernel32\client\except.c:721) Missing function in : lsasrv.dll
|
(..\dll\win32\kernel32\client\except.c:722) with the functionname : LsaIAllocateHeap
|
Unhandled exception
|
ExceptionCode: 80000100
|
CS:EIP 1b:7c7665f3
|
DS 23 ES 23 FS 3b GS 0
|
EAX: 00000000 EBX: 00000000 ECX: 00000000
|
EDX: 0012fdac EBP: 0012fdfc ESI: 00000000 ESP: 0012fdac
|
EDI: 000003ff EFLAGS: 00000246
|
Address:
|
7c760000+65f3 C:\ReactOS\system32\KERNEL32.dll
|
Frames:
|
788d0000+17d57 C:\ReactOS\System32\lsasrv.dll
|
77c50000+2e5a6 C:\ReactOS\system32\rpcrt4.dll
|
77c50000+238f8 C:\ReactOS\system32\rpcrt4.dll
|
77c50000+2351d C:\ReactOS\system32\rpcrt4.dll
|
77c50000+13d5 C:\ReactOS\system32\rpcrt4.dll
|
77c50000+dfbf C:\ReactOS\system32\rpcrt4.dll
|
77c50000+df9b C:\ReactOS\system32\rpcrt4.dll
|
788d0000+11aa6 C:\ReactOS\System32\lsasrv.dll
|
788d0000+12b9b C:\ReactOS\System32\lsasrv.dll
|
400000+1031 C:\ReactOS\System32\lsass.exe
|
400000+17c0 C:\ReactOS\System32\lsass.exe
|
400000+151c C:\ReactOS\System32\lsass.exe
|
400000+1741 C:\ReactOS\System32\lsass.exe
|
7c760000+e242 C:\ReactOS\system32\KERNEL32.dll
|
This used to work. Last known working revision from my side is r67542.