[LSASRV]: Implement a simplified version of LsaIAllocateHeap / LsaIAllocateHeapZero / LsaIFreeHeap. CORE-12432

svn path=/trunk/; revision=73330